ZGC: Kitchensink.java fails in ZBarrier::should_mark_through

XMLWordPrintable

    • gc
    • b27
    • x86_64
    • windows
    • Verified

      The following test fails in the JDK14 CI:

      applications/kitchensink/Kitchensink.java

      Here's a snippet from the log file:

      The tail of stress stdout is:
      Seed from RandomFactory = -3842022824007435822L
      Stress process main method is started.
      [7.996s][warning][jfr] LeakProfiler is currently not supported in combination with ZGC
      [54.082s][warning][jfr] LeakProfiler is currently not supported in combination with ZGC
      [261.847s][warning][jfr] LeakProfiler is currently not supported in combination with ZGC

      [error occurred during error reporting ((null)), id 0xe0000000, Internal Error (t:/workspace/open/src/hotspot/share/runtime/thread.cpp:978)]

      #
      # A fatal error has been detected by the Java Runtime Environment:
      #
      # Internal Error (t:/workspace/open/src/hotspot/share/gc/z/zBarrier.cpp:48), pid=4352, tid=4248
      # assert(ZAddress::is_marked(addr)) failed: Should be marked
      #
      # JRE version: Java(TM) SE Runtime Environment (14.0+26) (fastdebug build 14-ea+26-1241)
      # Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 14-ea+26-1241, mixed mode, tiered, z gc, windows-amd64)
      # Core dump will be written. Default location: T:\\testoutput\\test-support\\jtreg_closed_test_hotspot_jtreg_applications_kitchensink_Kitchensink_java\\scratch\\0\\hs_err_pid4352.mdmp
      #
      Unsupported internal testing APIs have been used.

      # An error report file with more information is saved as:
      # T:\\testoutput\\test-support\\jtreg_closed_test_hotspot_jtreg_applications_kitchensink_Kitchensink_java\\scratch\\0\\hs_err_pid4352.log
      #
      # If you would like to submit a bug report, please visit:
      # https://bugreport.java.com/bugreport/crash.jsp
      #
      ----------System.err:(170/13507)*----------

      Here's the crashing stack:

      --------------- T H R E A D ---------------

      Current thread (0x0000029442581fe0): JavaThread "Finalizer" daemon [_thread_in_vm, id=4248, stack(0x000000f0b0100000,0x000000f0b0200000)]

      Stack: [0x000000f0b0100000,0x000000f0b0200000]
      Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
      V [jvm.dll+0xaa9081] os::platform_print_native_stack+0xf1 (os_windows_x86.cpp:369)
      V [jvm.dll+0xca9d3b] VMError::report+0xf0b (vmerror.cpp:725)
      V [jvm.dll+0xcab5ee] VMError::report_and_die+0x8ae (vmerror.cpp:1533)
      V [jvm.dll+0xcabce4] VMError::report_and_die+0x64 (vmerror.cpp:1317)
      V [jvm.dll+0x4bee20] report_fatal+0x80 (debug.cpp:286)
      V [jvm.dll+0xc43e6c] Thread::check_possible_safepoint+0x4c (thread.cpp:984)
      V [jvm.dll+0xc43dc4] Thread::check_for_valid_safepoint_state+0x24 (thread.cpp:994)
      V [jvm.dll+0xa5c839] Mutex::lock+0x29 (mutex.cpp:105)
      V [jvm.dll+0x6ea290] JfrRecorderService::rotate+0x90 (jfrrecorderservice.cpp:444)
      V [jvm.dll+0x6bffef] JfrEmergencyDump::on_vm_shutdown+0x1ef (jfremergencydump.cpp:474)
      V [jvm.dll+0xcab1fc] VMError::report_and_die+0x4bc (vmerror.cpp:1420)
      V [jvm.dll+0xcabce4] VMError::report_and_die+0x64 (vmerror.cpp:1317)
      V [jvm.dll+0x4bf122] report_vm_error+0x102 (debug.cpp:264)
      V [jvm.dll+0xcf4c04] ZBarrier::should_mark_through<0>+0x44 (zbarrier.cpp:48)
      V [jvm.dll+0xcf37ef] ZBarrier::mark<1,0,1>+0x4f (zbarrier.cpp:91)
      V [jvm.dll+0xcfcdfe] ZBarrierSetRuntime::load_barrier_on_oop_field_preloaded+0x8e (zbarriersetruntime.cpp:30)
      C 0x0000029452b05295

            Assignee:
            Per Liden (Inactive)
            Reporter:
            Daniel Daugherty
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: