8235366: ZGC: Kitchensink.java fails in ZBarrier::should_mark_through

Reviewed-by: eosterlund, stefank